packages/isar_generator/test/errors/link/target_not_a_collection.dart
// link target is not annotated with @collection

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  final IsarLink<int> link = IsarLink();
}
